Refactor the sequential-challenge element

--- a/app/elements/services/task-service.html
+++ b/app/elements/services/task-service.html
@@ -37,6 +37,15 @@
 			on-response="_onResponse"
 			on-error="_onError">
 		</iron-ajax>
+		<iron-ajax
+			id="finishTaskRequest"
+			method="POST"
+			content-type="application/json"
+			with-credentials="true"
+			on-response="_onFinishTaskResponse"
+			on-error="_onError"
+			>
+		</iron-ajax>
 	</template>
 	<script>
 		Polymer({
@@ -64,10 +73,28 @@
 				this.$.getSingleTask.url = util.build('/tasks/' + key);
 				this.$.getSingleTask.generateRequest();
 			},
+			getByIdAndUpdateResult: function(key, resultKey){
+				// TODO(victorbalan): Refactor the use of query params
+				app.startLoading();
+				this.$.getSingleTask.url = util.build('/tasks/' + key + '?result=' + resultKey);
+				this.$.getSingleTask.generateRequest();
+			},
 			getAll: function(){
 				app.startLoading();
 				this.$.getMultiTasks.url = util.build('/tasks');
 				this.$.getMultiTasks.generateRequest();
+			},
+			finishTask: function(resultKey, taskIndex, lastSubmissionKey){
+				this.$.finishTaskRequest.url = util.build(
+					'/results/'+ resultKey +
+					'/finalSubmissions/' + taskIndex +
+					'?submissionKey' + lastSubmissionKey
+				);
+				this.$.finishTaskRequest.body = {};
+				this.$.finishTaskRequest.generateRequest();
+			},
+			_onFinishTaskResponse: function(){
+				this.fire('server-finished-task');
 			},
 			_onResponse: function(){
 				app.stopLoading();
