--- a/app/elements/submission/countdown-timer.html
+++ b/app/elements/submission/countdown-timer.html
@@ -43,7 +43,9 @@
 				}
 			},
 			startWithOffset: function(offset) {
-				this.duration -= (Date.now() - offset) * 1e6;
+				if(offset > 0){
+					this.duration -= (Date.now() - offset) * 1e6;
+				}
 				this.start();
 			},
 			stop: function(){
