--- a/app/elements/submission/tasks/canvas-game-task.html
+++ b/app/elements/submission/tasks/canvas-game-task.html
@@ -306,6 +306,7 @@
 					return;
 				}else if(move.Event === 'OUT_OF_BOUNDS'){
 					alert('Out of bounds!');
+					this.counter = this.moves.length;
 					return;
 				}
 
