--- a/app/elements/services/task-service.html
+++ b/app/elements/services/task-service.html
@@ -22,9 +22,8 @@
 			method="GET"
 			handle-as="json"
 			content-type="application/json"
-			last-response="{{task}}"
 			with-credentials="true"
-			on-response="_onResponse"
+			on-response="_onTaskResponse"
 			on-error="_onError">
 		</iron-ajax>
 		<iron-ajax
@@ -62,25 +61,28 @@
 					reflectToAttribute: true
 				}
 			},
+			ready: function(){
+				this.app = document.querySelector('app-element');
+			},
 			save: function(task){
-				app.startLoading();
+				this.app.startLoading();
 				this.$.postTask.body = task;
 				this.$.postTask.url = util.build('/tasks');
 				this.$.postTask.generateRequest();
 			},
 			getById: function(key){
-				app.startLoading();
+				this.app.startLoading();
 				this.$.getSingleTask.url = util.build('/tasks/' + key);
 				this.$.getSingleTask.generateRequest();
 			},
 			getByIdAndUpdateResult: function(key, resultKey){
 				// TODO(victorbalan): Refactor the use of query params
-				app.startLoading();
+				this.app.startLoading();
 				this.$.getSingleTask.url = util.build('/tasks/' + key + '?result=' + resultKey);
 				this.$.getSingleTask.generateRequest();
 			},
 			getAll: function(){
-				app.startLoading();
+				this.app.startLoading();
 				this.$.getMultiTasks.url = util.build('/tasks');
 				this.$.getMultiTasks.generateRequest();
 			},
@@ -96,11 +98,15 @@
 			_onFinishTaskResponse: function(){
 				this.fire('server-finished-task');
 			},
+			_onTaskResponse: function(r){
+				this.task = r.detail.response;
+				this.app.stopLoading();
+			},
 			_onResponse: function(){
-				app.stopLoading();
+				this.app.stopLoading();
 			},
 			_onError: function(err){
-				app.stopLoading();
+				this.app.stopLoading();
 				util.error(err);
 			}
 		});
