--- a/app/elements/submission/sequential/sequential-challenge.html
+++ b/app/elements/submission/sequential/sequential-challenge.html
@@ -33,7 +33,7 @@
 		<task-service id="taskService" task="{{task}}"></task-service>
 		<challenge-nav id="coolNav" task-index="{{taskIndex}}" total-tasks="{{totalTasks}}"
 		task-duration="{{taskDuration}}" challenge-duration="{{challenge.Duration}}"
-		task-offset="{{taskOffset}}" challenge-offset="{{challengeOffset}}"></challenge-nav>
+		task-start-time="{{taskStartTime}}" challenge-start-time="{{challengeStartTime}}"></challenge-nav>
 
 		<div id="content" style$="{{contentStyle}}">
 			<paper-material id="startChallengeCard" elevation="1" class="card">
@@ -86,11 +86,11 @@
 					type: Number,
 					notify: true
 				},
-				challengeOffset: {
+				challengeStartTime: {
 					type: Number,
 					value: 0
 				},
-				taskOffset: {
+				taskStartTime: {
 					type: Number,
 					value: 0
 				}
@@ -113,8 +113,8 @@
 					}
 				}
 				if(currentTask !== '' && this.taskIndex >= 0){
-					this.challengeOffset = new Date(this.result.StartTimes[0]).getTime();
-					this.taskOffset = new Date(this.result.StartTimes[this.taskIndex]).getTime();
+					this.challengeStartTime = new Date(this.result.StartTimes[0]).getTime();
+					this.taskStartTime = new Date(this.result.StartTimes[this.taskIndex]).getTime();
 
 					this.loadTaskById(currentTask);
 					this.$.coolNav.start();
@@ -155,7 +155,7 @@
 				});
 			},
 			_nextTask: function(){
-				this.taskOffset = 0;
+				this.taskStartTime = 0;
 
 				this.taskIndex++;
 				if(this.taskIndex < this.challenge.Tasks.length){
@@ -172,7 +172,7 @@
 				app.finishChallenge();
 			},
 			_taskTimeout: function(){
-				this.taskOffset = 0;
+				this.taskStartTime = 0;
 				this._nextTask();
 			},
 			_challengeTimeout: function(){
