Fix bugs on app  * fix 0 fields being present intially when opening invite-candidate modal  * fix task selection in the select mode for creating a challenge  * add a button to clear selection of tasks

--- a/app/elements/candidates/invite-candidates.html
+++ b/app/elements/candidates/invite-candidates.html
@@ -100,7 +100,7 @@
 				while ((el = document.querySelector('invite-candidate-input')) !== null) {
 					el.remove();
 				}
-				this.candidates = [];
+				this.splice('candidates', this.candidates.length);
 			},
 			_userInvited: function(){
 				this.$.toast.show();
