--- a/app/elements/user/user-detail.html
+++ b/app/elements/user/user-detail.html
@@ -45,12 +45,8 @@
 			font-size: 16vh;
 			color: #4B4F62;
 		}
-		#skillPolygonWrapper {
-			height: calc(100% - 16px);
-			width: 100%;
-		}
 		#topRight {
-			height: calc(100%);
+			height: 100%;
 			width: 50%;
 		}
 		#noActivity {
@@ -81,10 +77,11 @@
 						<p>{{user.Address}}</p>
 					</div>
 					<div id="topRight">
-						<div id="skillPolygonWrapper">
-						</div>
 						<template is="dom-if" if="{{!hasCompletedChallenges}}">
 							<h3 id="noActivity">User has no activity yet</h3>
+						</template>
+						<template is="dom-if" if="{{hasCompletedChallenges}}">
+							<skill-polygon id="skillPolygon" skills="{{mockedSkills}}"></skill-polygon>
 						</template>
 					</div>
 				</div>
@@ -160,7 +157,6 @@
 				this.previousChallenges = undefined;
 				this.hasCompletedChallenges = false;
 				this.displayPreviousChallenges = false;
-				this.$.skillPolygonWrapper.innerHTML = '';
 			},
 			getData: function(key){
 				this.refresh();
@@ -190,12 +186,6 @@
 			},
 			_profileChanged: function(profile){
 				this.$.challengeService.getLatestChallengesByProfileId(profile.Key);
-
-				this.chart = document.createElement('skill-polygon');
-				this.chart.skills = this.mockedSkills;
-				this.chart.id='skillPolygon';
-				this.$.skillPolygonWrapper.appendChild(this.chart);
-				this.chart.buildChart();
 			}
 		});
 	</script>
