--- a/app/elements/candidates/candidate-list.html
+++ b/app/elements/candidates/candidate-list.html
@@ -27,7 +27,7 @@
 		},
 		// TODO(victorbalan): check what happens if we replace with ready
 		getCandidates: function(){
-			this.$.userService.getAll();
+			this.$.userService.getCandidates();
 		}
 	});
 </script>
