--- a/app/elements/services/user-service.html
+++ b/app/elements/services/user-service.html
@@ -83,6 +83,11 @@
 				this.$.getMultiUsers.url = util.build('/users');
 				this.$.getMultiUsers.generateRequest();
 			},
+			getCandidates: function(){
+				app.startLoading();
+				this.$.getMultiUsers.url = util.build('/invitations');
+				this.$.getMultiUsers.generateRequest();
+			},
 			invite: function(user){
 				app.startLoading();
 				this.$.inviteUser.url = util.build('/invitations');
