--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
 
 <body unresolved class="fullbleed layout vertical fullHeight">
 <span id="browser-sync-binding"></span>
-	<template is="dom-bind" id="app" class="fullHeight">
+	<template is="dom-bind" id="app">
 	<iron-ajax
 		id="resultRequest"
 		method="POST"
