--- a/app/elements/candidates/invite-candidate-input.html
+++ b/app/elements/candidates/invite-candidate-input.html
@@ -1,67 +1,81 @@
 <link rel="import" href="/bower_components/paper-input/all-imports.html">
+<link rel="import" href="/bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
+<link rel="import" href="/bower_components/paper-menu/paper-menu.html">
+<link rel="import" href="/bower_components/paper-item/paper-item.html">
 
 <dom-module id="invite-candidate-input">
 	<style>
 		:host {
 			display: block;
 		}
-
-		#inputContainer {
-			display: table;
+		#address {
+			width: 325px;
 		}
 
-		#inputContainer paper-input {
-			display: table-cell;
-			width: 300px;
+		#challenges {
+			width: 200px;
+			margin-left: 15px;
 		}
-
-		#inputContainer select {
-			display: table-cell;
+		option {
+			width: 200px;
+		}
+		paper-menu {
+			background-color: white;
+		}
+		#challenge {
+			max-width: 200px;
+			overflow: hidden;
 			position: relative;
-			bottom: -27px;
-			margin-left: 20px;
+			bottom: -25px;
+			margin-left: 15px;
 		}
-
-		#inputContainer p {
-			display: table-cell;
+		iron-icon {
 			position: relative;
-			bottom: -29px;
-			padding-left: 10px;
-			padding-right: 10px;
-		}
-
-		#inputContainer iron-icon {
-			display: table-cell;
-			position: relative;
-			bottom: -15px;
-			margin-left: 25px;
+			bottom: -5px;
+			margin-left: 15px;
 			cursor: pointer;
 		}
 	</style>
 	<template>
-		<div id="inputContainer">
-			<paper-input id="address" label="Address" value="{{candidate.Address}}"></paper-input>
+		<div class="horizontal layout">
+			<paper-input
+				class="self-center"
+				id="address"
+				label="Firstname Lastname <person@example.com>"
+				value="{{candidate.Address}}"
+				pattern="^.*<[a-zA-Z0-9!#$%&\'*+\/=?^_`{|}~-]+(?:\.[a-zA-Z0-9!#$%&\'*+\/=?^_`{|}~-]+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?>$"
+				error-message="Address should match the example above"
+				required></paper-input>
 			<template is="dom-if" if="{{isSingleChallenge}}">
-				<p>{{challenges.0.Name}}</p>
+				<p id="challenge">{{challenges.0.Name}}</p>
 			</template>
 			<template is="dom-if" if="{{!isSingleChallenge}}">
-				<select id="challenges" on-change="_setChallenge">
-					<option selected disabled>Please select a challenge</option>
-					<template is="dom-repeat" items="{{challenges}}">
-						<option value="{{item.Key}}">{{item.Name}}</option>
-					</template>
-				</select>
+				<paper-dropdown-menu  class="self-center" id="challenges" label="Challenge" selected-item="{{selectedChallenge}}" required>
+					<paper-menu class="dropdown-content">
+						<template is="dom-repeat" items="{{challenges}}">
+							<option value="{{item.Key}}">{{item.Name}}</option><br>
+						</template>
+					</paper-menu>
+				</paper-dropdown-menu>
 			</template>
-			<iron-icon icon="remove" on-click="_removeItem"></iron-icon>
+			<iron-icon class="self-center" icon="remove" on-click="_removeItem"></iron-icon>
 		</div>
-		<br>
 	</template>
 	<script>
 		Polymer({
 			is: 'invite-candidate-input',
+			behaviors: [
+				Polymer.IronFormElementBehavior,
+				Polymer.IronValidatableBehavior
+			],
 			properties: {
 				challenges: {
 					type: Array
+				},
+				selectedChallenge: {
+					type: Object,
+					notify: true,
+					observer: '_selectedChallengeChanged'
 				},
 				candidate: {
 					type: Object,
@@ -73,11 +87,16 @@
 					computed: '_isSingleChallenge(challenges)'
 				}
 			},
+			validate: function(){
+				return this.$.address.validate() && this.$$('#challenges').validate();
+			},
 			_isSingleChallenge: function(challenges){
 				return challenges.length === 1;
 			},
-			_setChallenge: function () {
-				this.candidate.Challenge = this.$$('#challenges').options[this.$$('#challenges').selectedIndex].value;
+			_selectedChallengeChanged: function () {
+				if (!!this.selectedChallenge){
+					this.candidate.Challenge = this.selectedChallenge.value;
+				}
 			},
 			_removeItem: function () {
 				this.fire('candidate-removed', this.candidate);
