Fix login page display on IE

--- a/app/elements/login/login-page-email/login-page-email.html
+++ b/app/elements/login/login-page-email/login-page-email.html
@@ -8,7 +8,7 @@
 	<style type="text/css">
 :host {
 	/* layout properties for the host element */
-	@apply(--layout-vertical);
+	display: block;
 }
 
 iron-icon.huge {
@@ -87,7 +87,7 @@ Polymer({
 		empty: {
 			type: String,
 			notify: true
-		},
+		}
 	},
 	behaviors: [
 		Polymer.NeonAnimatableBehavior
