--- a/app/elements/login/login-page-password/login-page-password.html
+++ b/app/elements/login/login-page-password/login-page-password.html
@@ -8,8 +8,7 @@
 <dom-module id="login-page-password">
 	<style type="text/css">
 :host {
-	/* layout properties for the host element */
-	@apply(--layout-vertical);
+	display: block;
 }
 
 iron-icon.huge {
