--- a/app/elements/login/login-page-u2f/login-page-u2f.html
+++ b/app/elements/login/login-page-u2f/login-page-u2f.html
@@ -7,8 +7,7 @@
 <dom-module id="login-page-u2f">
 	<style type="text/css">
 :host {
-	/* layout properties for the host element */
-	@apply(--layout-vertical);
+	display: block;
 }
 
 iron-icon.huge {
