Add layout import to every scope that uses it

--- a/app/elements/candidates/candidate-list.html
+++ b/app/elements/candidates/candidate-list.html
@@ -1,5 +1,6 @@
 <link rel="import" href="candidate-card.html">
 <link rel="import" href="/elements/services/user-service.html">
+<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
 <dom-module id="candidate-list">
 	<style>
