--- a/app/elements/challenge/challenge-detail.html
+++ b/app/elements/challenge/challenge-detail.html
@@ -3,6 +3,7 @@
 <link rel="import" href="/elements/services/task-service.html">
 <link rel="import" href="/elements/skill/skill-polygon.html">
 <link rel="import" href="/elements/task/task-card.html">
+<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
 <link rel="import" href="/bower_components/paper-material/paper-material.html">
 
