--- a/app/elements/challenge/challenge-list.html
+++ b/app/elements/challenge/challenge-list.html
@@ -1,6 +1,6 @@
 <link rel="import" href="challenge-card.html">
 <link rel="import" href="/elements/services/challenge-service.html">
-
+<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 <link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
 
 <dom-module id="challenge-list">
