--- a/app/elements/login/login-page-email/login-page-email.html
+++ b/app/elements/login/login-page-email/login-page-email.html
@@ -3,6 +3,7 @@
 <link rel="import" href="/bower_components/paper-button/paper-button.html">
 <link rel="import" href="/bower_components/paper-input/all-imports.html">
 <link rel="import" href="/bower_components/paper-material/paper-material.html">
+<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
 <dom-module id="login-page-email">
 	<style type="text/css">
