--- a/app/elements/submission/tasks/canvas-game-task.html
+++ b/app/elements/submission/tasks/canvas-game-task.html
@@ -6,6 +6,7 @@
 <link rel="import" href="/elements/code-editor/language-selector.html">
 <link rel="import" href="/elements/services/template-service.html">
 <link rel="import" href="task-display.html">
+<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
 <dom-module id="canvas-game-task">
 	<style>
