--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -13,6 +13,7 @@
 <link rel="import" href="/bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="/bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="/bower_components/paper-toast/paper-toast.html">
+<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
 <!-- Error pages-->
 <link rel="import" href="error/error-page.html">
