--- a/app/elements/login/login-page-password/login-page-password.html
+++ b/app/elements/login/login-page-password/login-page-password.html
@@ -4,6 +4,7 @@
 <link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="/bower_components/paper-input/all-imports.html">
 <link rel="import" href="/bower_components/paper-material/paper-material.html">
+<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
 <dom-module id="login-page-password">
 	<style type="text/css">
