--- a/app/elements/login/login-page-u2f/login-page-u2f.html
+++ b/app/elements/login/login-page-u2f/login-page-u2f.html
@@ -3,6 +3,7 @@
 <link rel="import" href="/bower_components/paper-button/paper-button.html">
 <link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="/bower_components/paper-material/paper-material.html">
+<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
 <dom-module id="login-page-u2f">
 	<style type="text/css">
