--- a/app/elements/register/register-page.html
+++ b/app/elements/register/register-page.html
@@ -6,6 +6,7 @@
 <link rel="import" href="/bower_components/paper-input/all-imports.html">
 <link rel="import" href="/bower_components/paper-material/paper-material.html">
 <link rel="import" href="/bower_components/paper-toast/paper-toast.html">
+<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
 <dom-module id="register-page">
 	<style type="text/css">
