--- a/app/elements/skill/skill-list.html
+++ b/app/elements/skill/skill-list.html
@@ -1,4 +1,5 @@
 <link rel="import" href="skill-mini.html">
+<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
 <dom-module id="skill-list">
 	<template>
