--- a/app/elements/submission/challenge-nav.html
+++ b/app/elements/submission/challenge-nav.html
@@ -2,6 +2,7 @@
 <link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="/bower_components/paper-material/paper-material.html">
 <link rel="import" href="/elements/submission/countdown-timer.html">
+<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
 <dom-module id="challenge-nav">
 	<style>
