--- a/app/elements/submission/challenge-timeout.html
+++ b/app/elements/submission/challenge-timeout.html
@@ -1,3 +1,4 @@
+<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 <dom-module id="challenge-timeout">
 	<style>
 		:host{
