--- a/app/elements/submission/tasks/general-code-task.html
+++ b/app/elements/submission/tasks/general-code-task.html
@@ -5,6 +5,7 @@
 <link rel="import" href="/elements/code-editor/language-selector.html">
 <link rel="import" href="/elements/services/template-service.html">
 <link rel="import" href="task-display.html">
+<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
 <dom-module id="code-task">
 	<style>
