--- a/app/elements/task/task-detail.html
+++ b/app/elements/task/task-detail.html
@@ -3,6 +3,7 @@
 <link rel="import" href="/elements/skill/skill-polygon.html">
 <link rel="import" href="/elements/markdown/render-markdown.html">
 <link rel="import" href="/elements/services/task-service.html">
+<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
 <dom-module id="task-detail">
 	<style>
