--- a/app/elements/task/task-list.html
+++ b/app/elements/task/task-list.html
@@ -1,9 +1,9 @@
 <link rel="import" href="task-card.html">
-
 <link rel="import" href="/elements/challenge/challenge-modal.html">
 <link rel="import" href="/elements/task/task-detail.html">
 <link rel="import" href="/elements/services/task-service.html">
 <link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
 <dom-module id="task-list">
 	<style>
