--- a/app/elements/user/challenge/user-challenge-detail.html
+++ b/app/elements/user/challenge/user-challenge-detail.html
@@ -3,6 +3,7 @@
 <link rel="import" href="/elements/services/result-service.html">
 <link rel="import" href="/elements/services/user-service.html">
 <link rel="import" href="/elements/skill/skill-polygon.html">
+<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
 <dom-module id="user-challenge-detail">
 	<style>
