--- a/app/elements/user/challenge/user-task-detail.html
+++ b/app/elements/user/challenge/user-task-detail.html
@@ -3,6 +3,7 @@
 <link rel="import" href="/elements/user/challenge/test-results/diff-result.html">
 
 <link rel="import" href="/bower_components/paper-spinner/paper-spinner.html">
+<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
 <dom-module id="user-task-detail">
 	<style>
