--- a/app/elements/user/user-detail.html
+++ b/app/elements/user/user-detail.html
@@ -6,6 +6,7 @@
 
 <link rel="import" href="/bower_components/paper-button/paper-button.html">
 <link rel="import" href="/bower_components/paper-material/paper-material.html">
+<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
 <dom-module id="user-detail">
 	<style>
